# verizon_router_client

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: docker.yml  release.yml  test.yml
charts/verizon-router-operator/: Chart.yaml  values.yaml
charts/verizon-router-operator/crds/: crd-fiosdnsrecord.yaml  crd-fiosportforward.yaml
charts/verizon-router-operator/templates/: _helpers.tpl  deployment.yaml  rbac.yaml
k8s/: deployment.yaml  rbac.yaml
src/verizon_router_client/: __init__.py  cli.py  config.py  cr1000a.py  login.py  metrics.py  operator.py
src/verizon_router_client/cert/: Verizon Fios Root CA.pem
tests/: conftest.py  mock_router.py  test_auth.py  test_cli.py  test_client.py  test_config.py  test_integration.py  test_metrics.py  test_parsing.py
