[project]
name = "verizon-router-client"
version = "0.3.0"
description = "Python client for Verizon Fios router APIs (CR1000A web UI endpoints)."
readme = "README.md"
authors = [
    { name = "Brishen Hawkins", email = "brishen.hawkins@gmail.com" }
]
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "click>=8.1.8",
    "pydantic-settings>=2.11.0",
    "pytest>=8.4.2",
    "requests>=2.34.2",
]

[project.urls]
Repository = "https://github.com/Brishen/verizon_router_client"
Issues = "https://github.com/Brishen/verizon_router_client/issues"

[project.optional-dependencies]
operator = ["kopf", "kubernetes"]

[project.scripts]
vzrouter = "verizon_router_client.cli:cli"

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"
